Fix collapsed spacing, due to change in spacing system

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -9,7 +9,7 @@
   --font-base: var(--font-sans);
   --font-styleguide: "Inter", "BundesSansWeb", "Calibri", "Verdana", "Arial",
     "Helvetica", serif;
-  --stack-space: var(--s-m);
+  --stack-space: var(--s-16);
   --step-0: 1rem;
   --color-ui-primary: var(--color-base-blue-800);
   --color-ui-disabled: var(--color-base-gray-600);
